# agentic_hustler

./: .clinerules  .cursorrules  .gitignore  CONVENTIONS.md  LICENSE  README.md  asyncio.run(main())  pip install .  pyproject.toml  └── py.typed
context/: SPEC.md  TASKS.md
examples/: vc_agent.py
src/agentic_hustler/: __init__.py  core.py  llm.py
tests/: test_core.py  test_llm.py
